# souscriptions_odoo

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  AUDIT_REFONTE.md  CLAUDE.md  CONTEXT.md  DEMO_DEPLOYMENT.md  DEMO_DEPLOYMENT_SIMPLE.md  Dockerfile  Makefile  Makefile.simple  PORTAL_CLIENT.md  PORTAL_USAGER.md  README-docker.md  README.md  README_ARCHITECTURE.md  TESTING.md  __manifest__.py  architecture_souscriptions_odoo19.excalidraw  cycle_vie_données.excalidraw  docker-compose.demo.yml  docker-compose.prod.yml  docker-compose.yml  docker-demo.sh  docker-entrypoint-init.sh  plan.md  pyproject.toml  run_portal_tests.py  run_tests.sh  souscriptions_odoo.excalidraw  test_demo_data.py  test_periods_view.py  test_portal.py  test_portal_full.py  test_runner.py  toggle_metier.sh  unittest.cfg
.github/workflows/: ci.yml  release.yml  tests.yml
controllers/: portal.py
data/: grille_prix_demo.xml  produits_abonnement.xml  produits_abonnement_simple.xml  produits_energie.xml  produits_prestation.xml  raccordement_sequence.xml  raccordement_server_actions.xml  raccordement_stages.xml  souscription_etat_data.xml  souscription_sequence.xml
demo/: README.md  README_DEMO.md  consentement_demo.xml  create_demo_via_shell.sh  grille_prix_demo.xml  launch_demo.sh  launch_demo_dev.sh  launch_demo_poetry.sh  launch_demo_uv.sh  launch_dev_poetry.sh  launch_dev_uv.sh  launch_update.sh  load_demo_data.sh  prestations_demo.xml  quick_test.sh  raccordement_demo.xml  souscriptions_demo.xml  test_etat.sh  test_factures.sh
docker/: Dockerfile  README.md  docker-compose.yml  docker-entrypoint-init.sh
docker/config/: odoo-prod.conf  odoo.conf
docker/scripts/: build_and_push.sh  demo_simple.sh
docs/: consentement-chaine-responsabilite.excalidraw  consentement-donnees-conso.md
docs/adr/: 0001-odoo-systeme-ecriture-electricore-api-read-only.md  0002-deux-sources-de-verite-marge-en-analytique.md  0003-strategie-migration-odoo19-odoo-sh.md  0004-lien-periode-facture-source-unique.md  0005-granularite-energie-calendrier-comptage.md  0006-snapshot-periode-fait-autorite-facturation.md  0007-snapshot-periode-type-verrou-facturation.md  0008-quantite-facturee-mesure-ou-provision-selon-lissage.md  0009-prestation-refacturer-modele-independant-rassemble-sur-facture.md  0010-identite-souscription-rsc-cle-id-affaire-amorce.md  0011-contrat-pull-facturation-electricore-cle-rsc-mois.md  0012-prestation-etat-derive-mise-en-attente-opt-out.md  0013-isolation-comptable-solidaire-standard-produits-paralleles.md  0014-pas-de-verrou-lignes-facture-confiance-facturiste.md  0015-releves-index-enfant-fige-periode-projete-facture.md  0016-documents-contractuels-projection-souscription-consentements-raccordement.md  0017-consentement-donnees-conso-formulaire-odoo-journal-append-only.md  0018-abonnement-affine-base-3kva-plus-coefficient-kva.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/diagrams/: selection-prix.excalidraw
migrations/1.0.0/: pre-migrate.py
migrations/19.0.1.1.0/: post-migrate.py
migrations/19.0.1.2.0/: post-migrate.py
migrations/19.0.1.3.0/: pre-migrate.py
models/: __init__.py  account_move.py  grille_prix.py  metier_mesure_index.py  metier_mesure_index_importer.py  metier_perimetre.py  metier_perimetre_importer.py  metier_prestation_importer.py  souscription.py  souscription_metier_mixin.py  souscription_periode.py
models/core/: __init__.py  account_move.py  grille_prix.py  souscription.py  souscription_consentement.py  souscription_periode.py  souscription_presta.py  souscription_produit.py  souscription_refacturation.py  souscription_releve.py
models/metier/: __init__.py
models/metier/importers/: __init__.py  metier_mesure_index_importer.py  metier_perimetre_importer.py
models/metier/mixins/: __init__.py
models/metier/models/: __init__.py  metier_mesure_index.py  metier_perimetre.py  metier_prestation.py
models/raccordement/: __init__.py  raccordement_demande.py  raccordement_stage.py
report/: souscription_contrat_report.xml
reports/: facture_energie_template.xml  souscription_attestation_report.xml  souscription_conditions_particulieres_report.xml  souscription_contrat_report.xml
scripts/: build_and_push.sh  demo_oneliner.sh  demo_simple.sh  quick_update.sh  reset_demo.sh  run-app.sh  run-tests.sh
security/: ir.model.access.core.csv  ir.model.access.csv  ir.model.access.metier.csv  security_rules.xml  souscriptions_groups.xml
static/src/scss/: report_brand.scss
tests/: README.md  __init__.py  common.py  test_basic.py  test_catalogue.py  test_contrat_report.py  test_documents_contractuels.py  test_facturation.py  test_grille_prix.py  test_integration.py  test_invoice_template.py  test_periode_composition.py  test_periode_energie.py  test_periode_facture.py  test_periode_form.py  test_periode_snapshot.py  test_portal.py  test_presta.py  test_raccordement.py  test_raccordement_automation.py  test_refacturation.py  test_releve.py  test_releve_demo.py  test_security.py  test_souscription.py  test_ui.py  test_workflow.py
tests/data/: test_data.xml  test_fixtures.xml  test_raccordement_fixtures.xml
views/: grille_prix_views.xml  metier_mesure_index.xml  metier_perimetre.xml  portal_templates.xml  simple_portal_templates.xml  souscription_views.xml  souscriptions_periode_views.xml
views/core/: grille_prix_views.xml  souscription_portal_menu.xml  souscription_presta_views.xml  souscription_refacturation_views.xml  souscription_views.xml  souscriptions_periode_views.xml
views/metier/: metier_mesure_index.xml  metier_perimetre.xml  metier_prestation.xml
views/raccordement/: raccordement_demande_views.xml  raccordement_menu.xml
