[tool.poetry]
name = "souscriptions-odoo"
version = "1.0.0"
description = "Module Odoo pour gestion des souscriptions électriques"
authors = ["Virgile Daugé"]
readme = "README_ARCHITECTURE.md"
package-mode = false  # Désactive le mode package, on utilise Poetry seulement pour les dépendances

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.0"
fastparquet = "^2024.0.0"
pyarrow = "^18.0.0"  # Optionnel mais recommandé pour de meilleures performances
babel = "^2.14.0"  # Pour la localisation française
psycopg2-binary = "^2.9.0"  # Pour vérifier les données dans PostgreSQL

[tool.poetry.group.dev.dependencies]
# Pour le rechargement automatique du code Odoo (d'après doc Odoo officielle)
watchdog = "^6.0.0"  # Module watchdog pour auto-reload
inotify = "^0.2.10"  # Module inotify exact requis par Odoo
# Autres outils de développement (à décommenter si besoin)
# pytest = "^7.4.0"
# black = "^23.0.0"
# ruff = "^0.1.0"

[tool.poetry.scripts]
# Scripts personnalisés pour faciliter le lancement
odoo-demo = "demo.launch_demo:main"
odoo-dev = "demo.launch_dev:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-plugin-export]
# Permet d'exporter en requirements.txt si nécessaire pour d'autres environnements
extras = ["dev"]