[project]
name = "souscriptions-odoo"
version = "1.0.0"
description = "Module Odoo pour gestion des souscriptions électriques"
authors = [{ name = "Virgile Daugé" }]
requires-python = ">=3.13"
dependencies = [
    "babel>=2.14.0,<3",          # Pour la localisation française
    "psycopg2-binary>=2.9.0,<3", # Pour vérifier les données dans PostgreSQL
]

# Dépendances de développement (PEP 735). `uv sync` les installe par défaut ;
# pour s'en passer : `uv sync --no-dev`.
[dependency-groups]
dev = [
    # Rechargement automatique du code Odoo (d'après la doc Odoo officielle)
    "watchdog>=6.0.0,<7",   # Module watchdog pour auto-reload
    "inotify>=0.2.10,<0.3", # Module inotify exact requis par Odoo
    # Qualité de code (voir .pre-commit-config.yaml et .github/workflows/ci.yml)
    "ruff>=0.15.0,<0.16",   # lint + format ; config dans [tool.ruff] ci-dessous
    "pre-commit>=4.0.0,<5", # `pre-commit install` pour activer les hooks locaux
]

[tool.uv]
# Projet « virtuel » : uv gère seulement les dépendances et l'environnement, il
# ne construit pas de paquet (équivalent de l'ancien package-mode = false de
# Poetry). On ne déclare donc pas de [build-system].
package = false

# ---------------------------------------------------------------------------
# Ruff — lint + format. Source de vérité unique, lue par pre-commit et la CI.
# ---------------------------------------------------------------------------
[tool.ruff]
# Odoo 19 tourne sur Python 3.12 (image officielle odoo:19.0).
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",  # line-too-long — longues chaînes/docstrings FR, non pertinent à reformater
    "E741",  # ambiguous-variable-name — `l` pour « ligne » est idiomatique ici
    "B904",  # raise-without-from dans un except — style Odoo répandu, différé
]

[tool.ruff.lint.per-file-ignores]
# Odoo charge ses sous-modules via `from . import x` dans les __init__.py :
# ces imports paraissent inutilisés à ruff mais sont requis — ne jamais les
# laisser supprimer par `--fix`.
"**/__init__.py" = ["F401"]
# Le manifeste Odoo est un dictionnaire littéral nu (idiome du framework).
"**/__manifest__.py" = ["B018"]
# Les tests vérifient parfois qu'« une » erreur est levée sans cibler un type.
"tests/**" = ["B017"]

[tool.ruff.format]
# Odoo privilégie les guillemets simples (cohérent avec le code existant).
quote-style = "single"
